Update java-jvm.md